Add src file, move server code to server.js, add react dependencies

--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "plants"
   ],
   "author": "megan swanby",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
+  }
 }
