--- a/package.json
+++ b/package.json
@@ -15,12 +15,23 @@
   "author": "megan swanby",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.2",
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "firebase": "^4.1.3",
+    "foreman": "^2.0.0",
+    "marked": "^0.3.6",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "reactfire": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0",
+    "webpack": "^3.0.0"
   }
 }
