--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.15.3",
     "firebase": "^4.1.3",
     "foreman": "^2.0.0",
+    "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
