--- a/package.json
+++ b/package.json
@@ -12,28 +12,51 @@
     "agriculture",
     "plants"
   ],
+  "parser": "babel-eslint",
+  "plugins": [
+    "flowtype"
+  ],
   "author": "megan swanby",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.16.2",
     "body-parser": "^1.17.2",
+    "eslint-plugin-flowtype": "^2.35.0",
     "express": "^4.15.3",
     "firebase": "^4.1.3",
     "foreman": "^2.0.0",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.0.1",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
+    "mute-stream": "0.0.7",
+    "prettier": "^1.5.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "reactfire": "^1.0.0"
   },
   "scripts": {
+    "eslint": "eslint *.js",
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
     "nodemon": "^1.11.0",
-    "react-scripts": "^1.0.7",
-    "webpack": "^3.0.0"
+    "react-scripts": "^1.0.10",
+    "webpack": "^3.2.0"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --write",
+      "git add"
+    ]
   }
 }
