--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^1.5.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.2",
     "reactfire": "^1.0.0"
   },
   "scripts": {
