--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.15.3",
     "firebase": "^4.1.3",
     "foreman": "^2.0.0",
+    "history": "^4.6.3",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.1",
     "lodash": "^4.17.4",
