--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
     "foreman": "^2.0.0",
     "history": "^4.6.3",
     "husky": "^0.14.3",
-    "lint-staged": "^4.0.1",
+    "lint-staged": "^4.0.2",
     "lodash": "^4.17.4",
     "marked": "^0.3.6",
     "mute-stream": "0.0.7",
-    "prettier": "^1.5.2",
+    "prettier": "^1.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
-    "reactfire": "^1.0.0"
+    "reactfire": "^1.0.0",
+    "webpack-dev-middleware": "^1.11.0"
   },
   "scripts": {
     "eslint": "eslint *.js",
@@ -45,7 +46,9 @@
     "test": "react-scripts test --env=jsdom"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-plugin-import": "^2.7.0",
@@ -53,7 +56,7 @@
     "eslint-plugin-react": "^7.1.0",
     "nodemon": "^1.11.0",
     "react-scripts": "^1.0.10",
-    "webpack": "^3.2.0"
+    "webpack": "^2.1.0-beta.22"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
