--- a/package.json
+++ b/package.json
@@ -23,16 +23,18 @@
     "body-parser": "^1.17.2",
     "eslint-plugin-flowtype": "^2.35.0",
     "express": "^4.15.3",
-    "firebase": "^4.1.3",
+    "firebase": "^4.1.5",
     "foreman": "^2.0.0",
     "history": "^4.6.3",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.2",
     "lodash": "^4.17.4",
+    "lodash.map": "^4.6.0",
     "marked": "^0.3.6",
     "mute-stream": "0.0.7",
     "prettier": "^1.5.3",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
     "reactfire": "^1.0.0",
@@ -42,7 +44,8 @@
     "eslint": "eslint *.js",
     "precommit": "lint-staged",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "webpack-dev-server",
+    "build": "webpack -d",
     "test": "react-scripts test --env=jsdom"
   },
   "devDependencies": {
@@ -50,13 +53,14 @@
     "babel-eslint": "^7.2.3",
     "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.2",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "nodemon": "^1.11.0",
     "react-scripts": "^1.0.10",
-    "webpack": "^2.1.0-beta.22"
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.6.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
